--- a/pages/register.html
+++ b/pages/register.html
@@ -42,7 +42,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="main">
     <section class="form">
       <h2 class="h2">Для подключения к системе заполните данные:</h2>
       <form>
@@ -81,7 +81,6 @@
         <button type="submit" class="btn mob:btn-block btn-primary">Подключиться</button>
       </form>
     </section>
-
     <section class="contacts" id="contacts">
       <h2>Контакты</h2>
       <div class="flex">
