--- a/index.html
+++ b/index.html
@@ -482,16 +482,16 @@
       <div id="carousel" class="mob:d-none">
         <div class="slider">
           <div class="slide one">
-            <img src="./assets/iPhone_13_Pro_left.png" alt="" data-speed="0.5">
-            <img src="./assets/iPhone_13_Pro_right.png" alt="" data-speed="0.4">
+            <img src="./assets/iPhone_13_Pro_left.png" alt="" data-speed="5">
+            <img src="./assets/iPhone_13_Pro_right.png" alt="" data-speed="3">
           </div>
           <div class="slide two">
-            <img src="./assets/iPhone_12_Pro_left.png" alt="" data-speed="0.25">
-            <img src="./assets/iPhone_12_Pro_right.png" alt="" data-speed=".15">
+            <img src="./assets/iPhone_12_Pro_left.png" alt="" data-speed="7 ">
+            <img src="./assets/iPhone_12_Pro_right.png" alt="" data-speed="2">
           </div>
           <div class="slide three">
-            <img src="./assets/message.png" alt="" data-speed="0.2" style="z-index: 1; margin-top: -100px">
-            <img src="./assets/robot-in-ellipse.png" alt="" data-speed=".15">
+            <img src="./assets/message.png" alt="" data-speed="3" style="z-index: 1; margin-top: -100px; margin-left: -150px;">
+            <img src="./assets/robot-in-ellipse.png" alt="" data-speed="1">
           </div>
         </div>
       </div>
@@ -644,7 +644,7 @@
     </main>
   </footer>
 
-  <button id="up"></button>
+  <a href="#" id="up"><img src="./assets/icons/arrow-up.svg" alt=""></a>
 
   <script src="./script/script.js">
   </script>
