--- a/pages/register.html
+++ b/pages/register.html
@@ -85,16 +85,16 @@
       <h2>Контакты</h2>
       <div class="flex">
         <div class="flex">
-          <div><img src="./assets/icons/Telegram.png" alt=""></div>
+          <div><img src="../assets/icons/Telegram.png" alt=""></div>
           <div>
-            <a href="https://t.me/TatianaMichurina" class="link">@TatianaMichurina</a>
+            <a href="https://t.me/TatianaMichurina" class="link" target="_blank">@TatianaMichurina</a>
             <p class="inter">Татьяна</p>
           </div>
         </div>
         <div class="flex">
-          <div><img src="./assets/icons/Telegram.png" alt=""></div>
+          <div><img src="../assets/icons/Telegram.png" alt=""></div>
           <div>
-            <a href="https://t.me/katesmsads" class="link">@katesmsads</a>
+            <a href="https://t.me/katesmsads" class="link" target="_blank">@katesmsads</a>
             <p class="inter">Екатерина</p>
           </div>
         </div>
@@ -105,22 +105,22 @@
       <div class="flex">
         <div>
           <p class="inter">Стать нашим клиентом:</p>
-          <a href="#!" class="link">
-            <img src="./assets/icons/mail.svg" alt="" class="icon">
+          <a href="#!" class="link" target="_blank">
+            <img src="../assets/icons/mail.svg" alt="" class="icon">
             sales@smsads.ru
           </a>
         </div>
         <div>
           <p class="inter">По общим вопросам:</p>
-          <a href="#!" class="link">
-            <img src="./assets/icons/mail.svg" alt="" class="icon">
+          <a href="#!" class="link" target="_blank">
+            <img src="../assets/icons/mail.svg" alt="" class="icon">
             info@smsads.ru
           </a>
         </div>
         <div>
           <p class="inter">Предложить альтернативные каналы коммуникации нам и нашим клиентам:</p>
-          <a href="#!" class="link">
-            <img src="./assets/icons/mail.svg" alt="" class="icon">
+          <a href="#!" class="link" target="_blank">
+            <img src="../assets/icons/mail.svg" alt="" class="icon">
             partner@smsads.ru
           </a>
         </div>
